Bug 1489 - Parser code for -maxbigreqsize uses wrong datatype
Summary: Parser code for -maxbigreqsize uses wrong datatype
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: git
Hardware: All All
: high minor
Assignee: Roland Mainz
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-09-28 21:13 UTC by Roland Mainz
Modified: 2004-12-07 03:30 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
[FIXED_X11R68x] Patch for 2004-09-22-trunk (2.98 KB, patch)
2004-09-28 21:16 UTC, Roland Mainz
roland.mainz: 6.8-branch+
Details | Splinter Review

Description Roland Mainz 2004-09-28 21:13:38 UTC
The command line parsing code for the "-maxbigreqsize" option uses a wrong
datatype - |int| instead of |long| which (theoretically) may cause problems for
16bit platforms.
Comment 1 Roland Mainz 2004-09-28 21:16:50 UTC
Created attachment 979 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-22-trunk
Comment 2 Roland Mainz 2004-09-28 21:18:43 UTC
Patch checked-in...

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.404; previous revision: 1.403
/cvs/xorg/xc/programs/Xserver/os/utils.c,v  <--  utils.c
new revision: 1.9; previous revision: 1.8
Mailing the commit message to xorg-commit@pdx.freedesktop.org...

.. marking bug as FIXED.
Comment 3 Roland Mainz 2004-11-04 23:19:05 UTC
Comment on attachment 979 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-22-trunk

Requesting approval for X11R6.8.2: Simple datatype change s/int/long/ for
correctness.
Comment 4 Roland Mainz 2004-11-19 07:32:18 UTC
Comment on attachment 979 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-22-trunk

Approved for the X11R6.8.x branch in the 2004-11-17 release-wranglers phone
call.
Please don't commit it yourself, I'll handle that once the CVS service is
available again.
Comment 5 Roland Mainz 2004-12-07 22:30:52 UTC
Comment on attachment 979 [details] [review]
[FIXED_X11R68x] Patch for 2004-09-22-trunk

patch checked-in into X11R6.8.x stable branch:

/cvs/xorg/xc/ChangeLog,v  <--  ChangeLog
new revision: 1.365.2.13; previous revision: 1.365.2.12
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
/cvs/xorg/xc/programs/Xserver/os/utils.c,v  <--  utils.c
new revision: 1.6.2.2; previous revision: 1.6.2.1
cvs commit: Using deprecated info format strings.  Convert your scripts to use
the new argument format and remove '1's from your info file format strings.
Mailing the commit message to xorg-commit@lists.freedesktop.org...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.