//bugs.freedesktop.org/show_bug.cgi?id=1489) attachment #979     (https://bugs.freedesktop.org/attachment.cgi?id=979): Use |long|     instead of |int| for BIGREQUESTS commandline option.